sources = [
	'main.c',
	'board.c',
	'ships.c'
]

dependencies = [
	dependency('allegro-5'),
	dependency('allegro_font-5'),
	dependency('allegro_primitives-5'),
	dependency('allegro_color-5'),
	dependency('allegro_image-5')
]

executable(
	'AirshipBattles',
	sources,
	dependencies : dependencies,
	install : true
)
